// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogFeedback - Snapshots > matches snapshot for default state 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    aria-label="Provide Feedback"
    class="w-2xl"
    data-testid="dialog-content"
  >
    <div
      data-feedback=""
      data-testid="dialog-feedback-content"
      data-user="test-user-123"
    >
      <div
        data-max-length="1000"
        data-post-id="test-user-123"
        data-testid="post-header"
      >
        PostHeader
      </div>
      DialogFeedbackContent
    </div>
  </div>
</div>
`;

exports[`DialogFeedback - Snapshots > matches snapshot for success state 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    aria-label="Provide Feedback"
    class="w-2xl"
    data-testid="dialog-content"
  >
    <div
      data-testid="dialog-feedback-success"
    >
      DialogFeedbackSuccess
    </div>
  </div>
</div>
`;

exports[`DialogFeedback - Snapshots > matches snapshot when submitting 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    aria-label="Provide Feedback"
    class="w-2xl"
    data-testid="dialog-content"
  >
    <div
      data-feedback="This is test feedback"
      data-testid="dialog-feedback-content"
      data-user="test-user-123"
    >
      <div
        data-character-count="21"
        data-max-length="1000"
        data-post-id="test-user-123"
        data-testid="post-header"
      >
        PostHeader
      </div>
      DialogFeedbackContent
    </div>
  </div>
</div>
`;

exports[`DialogFeedback - Snapshots > matches snapshot with feedback content 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    aria-label="Provide Feedback"
    class="w-2xl"
    data-testid="dialog-content"
  >
    <div
      data-feedback="This is test feedback"
      data-testid="dialog-feedback-content"
      data-user="test-user-123"
    >
      <div
        data-character-count="21"
        data-max-length="1000"
        data-post-id="test-user-123"
        data-testid="post-header"
      >
        PostHeader
      </div>
      DialogFeedbackContent
    </div>
  </div>
</div>
`;
